ensure qrc + QDir::searchPaths work for icons

before we had some optimization to check which paths
are absolute, but that one is wrong, applications
might rely on set search paths

BUG: 434451